--- a/templates/indexAJAX.html
+++ b/templates/indexAJAX.html
@@ -2,6 +2,7 @@
   <p>{{ month['month_name'] }} {{ month['YEAR'] }}</p>
 </div>
 
+{% if not categoryLabel %}
 <div class="mb-4 bg-light p-2 rounded">
   <div class="row">
     <div class="col-4 text-success">
@@ -16,6 +17,8 @@
   </div>
 </div>
 
+{% endif %}
+
 {% for day in days %}
 
   <div class="table-responsive pb-5 rounded">
@@ -26,7 +29,7 @@
           <th scope="col" class="col-2 bg-primary text-center text-white">{{ day['DAY'] }}.{{ day['MONTH'] }}</th>
           <th scope="col" class="col-4"></th>
           <th scope="col" class="text-success col">€ {{ day['inc_per_day'] }}</th>
-          <th scope="col" class="text-danger col">€ {{ day['exp_per_day']}}</th>
+          <th scope="col" class="text-danger col">€ {{ day['exp_per_day'] }}</th>
           <th scope="col" class="col-2">€ {{ day['saldo'] }}</th>
         </tr>
       </thead>
@@ -56,7 +59,7 @@
           <!-- Expense -->
           <td class="col text-danger">
             {% if transaction['exp'] == 1 %}
-              € {{ transaction['amount']  }}
+              € {{ transaction['amount'] }}
             {% endif %}
           </td>
           <td class="col-2">
@@ -75,5 +78,3 @@
   </div>
 
 {% endfor %}
-
-
