--- a/templates/trips.html
+++ b/templates/trips.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Index
+    Trips
 {% endblock %}
 
 
@@ -15,21 +15,30 @@
 
 
 {% block main %}
+<div class="mb-5">
+  <h1>Trips</h1>
+  <hr>
+</div>
 
+  <div class="row">
+    {% for trip in trips %}
+    <div class="col-sm-4 mb-4">
+      <div class="card text-left">
+        <div class="card-header d-flex align-items-center justify-content-between">
+          <div class="row ml-2">
 
-  {% for trip in trips %}
-  <div class="row border mb-3 shadow-sm rounded">
-    <div class="col">
-      <a href="" id="{{ trip['id'] }}">{{ trip['title'] }}</a>
+              <b>{{ trip['title'] }}</b>
+
+          </div>
+        </div>
+        <div class="card-body">
+          <p class="card-text">From: {{ trip['startDay'] }} {{ trip['startMonth_name'] }}. {{ trip['startYear'] }}<br>To: {{ trip['endDay'] }} {{ trip['endMonth_name'] }}. {{ trip['endYear'] }}</p>
+          <a class="btn btn-primary" href="/trips/{{ trip['title'] }}">Go to trip</a>
+        </div>
+      </div>
     </div>
-    <div class="col">
-      <p>{{ trip['startDate'] }}</p>
-    </div>
-    <div class="col">
-      <p>{{ trip['endDate'] }}</p>
-    </div>
+    {% endfor %}
   </div>
-  {% endfor %}
 
 
 
