--- a/templates/trips.html
+++ b/templates/trips.html
@@ -24,7 +24,7 @@
     {% for trip in trips %}
     <div class="col-sm-4 mb-4">
       <div class="card text-left">
-        <div class="card-header d-flex align-items-center justify-content-between">
+        <div class="card-header">
           <div class="row ml-2">
 
               <b>{{ trip['title'] }}</b>
