--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,14 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    {% if not categoryLabel %}Index{% else %} {{ categoryLabel }} {% endif %}
+    Index
+{% endblock %}
+
+
+{% block body %}
+
+onload="changeMonthIndex('curr')"
+
 {% endblock %}
 
 <!--
@@ -55,254 +62,21 @@
 
 
 <div class="mb-5">
-  <h1>{% if not categoryLabel %} Transactions {% else %} {{ categoryLabel }} {% endif %}</h1>
+  <h1>Transactions</h1>
   <hr>
 </div>
 
 
 <div class="btn-group mb-4" role="group" aria-label="Basic example">
-  <button type="button" class="btn btn-primary material-icons" id="prev_month" onclick={% if not categoryLabel %}"changeToPrevMonth()" {% else %} "changeToPrevMonthCat()" {% endif %}>keyboard_arrow_left</button>
-  <button type="button" class="btn btn-primary material-icons" id="next_month" onclick={% if not categoryLabel %}"changeToNextMonth()" {% else %} "changeToNextMonthCat()" {% endif %}>keyboard_arrow_right</button>
+  <button type="button" class="btn btn-primary material-icons" id="prev_month" onclick="changeMonthIndex('prev')">keyboard_arrow_left</button>
+  <button type="button" class="btn btn-primary material-icons" id="next_month" onclick="changeMonthIndex('next')">keyboard_arrow_right</button>
 </div>
 
 <div id="monthly_expenses">
 
-
-<div class="mb-2">
-  <p>{{ month['month_name'] }} {{ month['YEAR'] }}</p>
-</div>
-
-{% if not categoryLabel %}
-<div class="mb-4 bg-light p-2 rounded">
-  <div class="row">
-    <div class="col-4 text-success">
-      <b>€ {{ month['inc_per_month'] }}</b>
-    </div>
-    <div class="col-4 text-danger">
-      <b>€ {{ month['exp_per_month'] }}</b>
-    </div>
-    <div class="col-4">
-      <b>€ {{ month['saldo'] }}</b>
-    </div>
-  </div>
-</div>
-
-{% endif %}
-
-{% for day in days %}
-
-  <div class="table-responsive pb-5 rounded">
-
-    <table class="table table-hover shadow-sm border">
-      <thead class="thead-light rounded-top">
-        <tr class="text-left d-flex">
-          <th scope="col" class="col-2 bg-primary text-center text-white">{{ day['DAY'] }}.{{ day['MONTH'] }}</th>
-          <th scope="col" class="col-4"></th>
-          <th scope="col" class="text-success col">{% if not categoryLabel %}€ {{ day['inc_per_day'] }}{% endif %}</th>
-          <th scope="col" class="text-danger col">€ {{ day['exp_per_day'] }}</th>
-          <th scope="col" class="col-2">{% if not categoryLabel %}€ {{ day['saldo'] }}{% endif %}</th>
-        </tr>
-      </thead>
-
-      {% for transaction in transactions %}
-
-      {% if transaction['DAY'] == day['DAY'] %}
-
-      <tbody>
-        <tr class="text-left d-flex">
-          <td class="col-2">
-            {% if transaction['exp'] == 1 %}
-              {{ transaction['category'] }}
-            {% endif %}
-          </td>
-          <td class="col-4">
-            {% if transaction['notes'] %}
-              <i>{{ transaction['notes'] }}</i>
-            {% endif %}
-          </td>
-          <!-- Income -->
-          <td class="col text-success">
-            {% if transaction['exp'] == 0 %}
-              € {{ transaction['amount'] }}
-            {% endif %}
-          </td>
-          <!-- Expense -->
-          <td class="col text-danger">
-            {% if transaction['exp'] == 1 %}
-              € {{ transaction['amount'] }}
-            {% endif %}
-          </td>
-          <td class="col-2">
-            <button type="button" class="btn btn-outline-primary" onclick="lookup(this.value)" value="{{ transaction['id'] }}" data-toggle="modal" data-target={% if transaction['exp'] == 1 %} "#editExpModal" {% else %} "#editIncModal" {% endif %}>Edit</button>
-            <button type="button" class="btn btn-outline-danger" onclick="deleteTransaction(this.value)" value="{{ transaction['id'] }}" data-toggle="modal" data-target="#deleteModal">Delete</button>
-          </td>
-        </tr>
-      </tbody>
-
-      {% endif %}
-
-      {% endfor %}
-
-    </table>
-
-  </div>
-
-{% endfor %}
 </div>
 
 
-<script>
-var allTransactions = JSON.parse('{{ allTransactions | tojson | safe }}');
-var numberOfAllTransactions = allTransactions.length
-
-console.log('All transactions:')
-console.log(allTransactions)
-console.log('-----------------')
-
-
-</script>
-
-
-
-<!-- Edit Expense Modal-->
-<div class="modal fade" id="editExpModal">
-  <div class="modal-dialog modal-dialog-centered modal-md">
-    <div class="modal-content border-0">
-      <div class="modal-header bg-primary text-white justify-content-center">
-        <h1>Edit Expense</h1>
-      </div>
-      <div class="modal-body">
-          <form id="editExpForm" method="post" action="/editExpenses">
-              <div class="form-group">
-                <label for="editExpDate" class="font-weight-bold">Date:</label> <br>
-                <input autofocus class="form-control w-100" name="editExpDate" placeholder="Enter Date" id="editExpDate" type="date" required>
-              </div>
-              <div class="form-group">
-                <label for="editExpAccount" class="font-weight-bold" disabled>Account:</label> <br>
-                <select disabled class="form-control w-100" name="editExpAccount" placeholder="Enter Account" id="editExpAccount" type="text">
-                    <option selected>Account</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="editExpCategory" class="font-weight-bold">Category:</label> <br>
-                <select class="form-control w-100" name="editExpCategory" placeholder="Choose Category" id="editExpCategory" type="text" required>
-                  <option disabled selected value="">Category</option>
-                  {% for cat in expCategories %}
-                    <option value="{{ cat['id'] }}">{{ cat['label'] }}</option>
-                  {% endfor %}
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="editExpTrip" class="font-weight-bold">Trip or Home:</label> <br>
-                <select class="form-control w-100" name="editExpTrip" placeholder="Enter Trip or Home" id="editExpTrip" type="text" required>
-                    <option selected value="1">Home</option>
-                    {% for trip in trips %}
-                      <option value="{{ trip['id'] }}">{{ trip['title'] }}</option>
-                    {% endfor %}
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="editExpAmount" class="font-weight-bold">Amount:</label> <br>
-                <input class="form-control w-100" name="editExpAmount" lang="en_EN" placeholder="Enter Amount" id="editExpAmount" min="0" step="0.01" type="number" value="" required>
-              </div>
-              <div class="form-group">
-                <label for="editExpNotes" class="font-weight-bold">Notes:</label> <br>
-                <input class="form-control w-100" name="editExpNotes" placeholder="Enter Notes" id="editExpNotes" type="text">
-              </div>
-              <div class="form-group">
-                <input class="form-control w-100" name="editExpId" id="editExpId" type="hidden">
-              </div>
-          </form>
-      </div>
-      <div class="modal-footer">
-          <div class="container">
-              <div class="row">
-                <div class="col">
-                    <input type="submit" class="btn btn-primary btn-block" id="editExpSave" value="Save" form="editExpForm">
-                    <input type="button" class="btn btn-default border-primary btn-block" value="Close" data-dismiss="modal">
-                </div>
-              </div>
-          </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!-- Edit Income Modal -->
-<div class="modal fade" id="editIncModal">
-  <div class="modal-dialog modal-dialog-centered modal-md">
-    <div class="modal-content border-0">
-      <div class="modal-header bg-primary text-white justify-content-center">
-        <h1>Edit Income</h1>
-      </div>
-      <div class="modal-body">
-          <form id="editIncForm" style="text-align: left;" method="post" action="/editIncome">
-              <div class="form-group">
-                <label for="editIncDate" class="font-weight-bold">Date:</label> <br>
-                <input autofocus class="form-control w-100" name="editIncDate" placeholder="Enter Date" id="editIncDate" type="date">
-              </div>
-              <div class="form-group">
-                <label for="editIncAccount" class="font-weight-bold" disabled>Account:</label> <br>
-                <select disabled class="form-control w-100" name="editIncAccount" placeholder="Enter Account" id="editIncAccount" type="text">
-                    <option selected>Account</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="editIncAmount" class="font-weight-bold">Amount:</label> <br>
-                <input class="form-control w-100" name="editIncAmount" lang="en_EN" placeholder="Enter Amount" id="editIncAmount" min="0" step="0.01" type="number">
-              </div>
-              <div class="form-group">
-                <label for="editIncNotes" class="font-weight-bold">Notes:</label> <br>
-                <input class="form-control w-100" name="editIncNotes" placeholder="Enter Notes" id="editIncNotes" type="text">
-              </div>
-              <div class="form-group">
-                <input class="form-control w-100" name="editIncId" id="editIncId" type="hidden">
-              </div>
-          </form>
-      </div>
-      <div class="modal-footer">
-          <div class="container">
-              <div class="row">
-                  <div class="col">
-                      <input type="submit" class="btn btn-primary btn-block" value="Save" form="editIncForm">
-                      <input type="button" class="btn btn-default border-primary btn-block" value="Close" data-dismiss="modal">
-                  </div>
-              </div>
-          </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!-- Delete Modal -->
-<div class="modal fade" id="deleteModal">
-  <div class="modal-dialog modal-dialog-centered modal-md">
-    <div class="modal-content border-0">
-      <div class="modal-header bg-primary text-white justify-content-center">
-      </div>
-      <div class="modal-body">
-        <p>Are you sure you want to delete this transaction?</p>
-          <form id="deleteForm" style="text-align: left;" method="post" action="/deleteTransaction">
-            <div class="form-group">
-              <input class="form-control w-100" name="deleteId" id="deleteId" type="hidden">
-            </div>
-          </form>
-      </div>
-      <div class="modal-footer">
-          <div class="container">
-              <div class="row">
-                  <div class="col">
-                      <input type="submit" class="btn btn-primary btn-block" value="Yes" form="deleteForm">
-                      <input type="button" class="btn btn-default border-primary btn-block" value="No" data-dismiss="modal">
-                  </div>
-              </div>
-          </div>
-      </div>
-    </div>
-  </div>
-</div>
-
+{% include 'editTransactionModals.html' %}
 
 {% endblock %}
