added functionality to edit trips

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -226,6 +226,11 @@
                         <label for="endDate" class="font-weight-bold">End Date:</label> <br>
                         <input autofocus class="form-control w-100" name="endDate" placeholder="Enter End Date" id="endDate" type="date" required>
                       </div>
+                      <select class="selectpicker" multiple data-live-search="true">
+                        <option>Mustard</option>
+                        <option>Ketchup</option>
+                        <option>Relish</option>
+                      </select>
                   </form>
               </div>
               <div class="modal-footer">
