You now can add countries to a trip an their flags are displayed on top of the trip details

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 {% block body %}
 
-onload="changeMonthIndex('curr')"
+
 
 {% endblock %}
 
@@ -76,6 +76,9 @@ onload="changeMonthIndex('curr')"
 
 </div>
 
+<script>
+  document.addEventListener("DOMContentLoaded", changeMonthIndex('curr'))
+</script>
 
 {% include 'editTransactionModals.html' %}
 
