added functionality to delete trips with different options and implemented the country feature in the trip edit  modal

--- a/templates/editTransactionModals.html
+++ b/templates/editTransactionModals.html
@@ -117,7 +117,7 @@ var numberOfAllTransactions = allTransactions.length
 </div>
 
 
-<!-- Delete Modal -->
+<!-- Delete Transaction Modal -->
 <div class="modal fade" id="deleteModal">
   <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content border-0">
