--- a/templates/trips.html
+++ b/templates/trips.html
@@ -22,9 +22,9 @@
 
   <div class="row">
     {% for trip in trips %}
-    <div class="col-sm-4 mb-4">
+    <div class="col-lg-4 col-sm-6 mb-4">
       <div class="card text-left">
-        <div class="card-header">
+        <div class="card-header d-flex flex-row justify-content-between" style="height: 100px;">
           <div class="row ml-2">
 
               <b>{{ trip['title'] }}</b>
@@ -32,7 +32,11 @@
           </div>
         </div>
         <div class="card-body">
-          <p class="card-text">From: {{ trip['startDay'] }} {{ trip['startMonth_name'] }}. {{ trip['startYear'] }}<br>To: {{ trip['endDay'] }} {{ trip['endMonth_name'] }}. {{ trip['endYear'] }}</p>
+          <span class="card-text mb-2">From: {{ trip['startDay'] }} {{ trip['startMonth_name'] }}. {{ trip['startYear'] }}<br>To: {{ trip['endDay'] }} {{ trip['endMonth_name'] }}. {{ trip['endYear'] }}</span>
+          <div>
+            <div id="flags">
+            </div>
+          </div>
           <a class="btn btn-primary" href="/trips/{{ trip['title'] }}">Go to trip</a>
         </div>
       </div>
@@ -41,6 +45,10 @@
   </div>
 
 
-
+<script>
+{% for code in trips['country_codes'] %}
+document.getElementById('flags').insertAdjacentHTML('afterend', '<img src="https://www.countryflags.io/' + '{{ code["country_code"] }}' + '/flat/64.png">')
+{% endfor %}
+</script>
 
 {% endblock %}
